@@ -1,4 +1,0 @@
-package com.mygdx.ui.buttons;
-
-public class LootButton {
-}
